<resources>
    <string name="app_name">CariKerja</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="title_login">Selamat Datang!</string>
    <string name="subtitle_login">Masuk dengan email dan password untuk mengakses akun anda</string>
    <string name="email">Email</string>
    <string name="example_email">contoh@gmail.com</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="example_password">********</string>
    <string name="forgot_password">Lupa Kata Sandi</string>
    <string name="forgot_password_login">Forgot Password ?</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="title_register">Daftar Akun!</string>
    <string name="example_name">John Doe</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="bod">Tanggal Lahir</string>
    <string name="example_date">23-06-2001</string>
    <string name="phone">Nomor Telepon ( WA )</string>
    <string name="example_phone">085728075282</string>
    <string name="address">Alamat</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="sign_in">Masuk</string>
    <string name="biodata">Biodata</string>
    <string name="upload_image">Unggah Foto</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Album</string>
    <string name="recruiter">Rekruiter</string>
    <string name="worker">Pencari Kerja</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="choose_role">Role</string>
    <string name="complete_profile">Lengkapi Profil</string>
    <string name="subtitle_complete_profile">Silahkan mengisi avatar, tanggal lahir, dan alamat sebelum melanjutkan ke tahap berikutnya agar profil anda dapat lebih dipercaya</string>
    <string name="title_profile">Profile</string>
    <string name="total_balance">Total Saldo</string>
    <string name="example_balance">Rp 5.000.000</string>
    <string name="transfer">Transfer</string>
    <string name="history">Riwayat</string>
    <string name="top_up">Isi Saldo</string>
    <string name="title_work">Pekerjaan</string>
    <string name="rekomendasi">Rekomendasi Pekerjaan</string>
    <string name="example_job">UI/UX Designer</string>
    <string name="example_username">Siti Paijo</string>
    <string name="example_job_address">Ngaglik, Sleman, Yogyakarta</string>
    <string name="example_salary">400.000 - Rp 600.000</string>
    <string name="open">Terbuka</string>
    <string name="remote">Jarak Jauh</string>
    <string name="example_work_duration">3 Hari</string>
    <string name="example_post_time">6 jam yang lalu</string>
    <string name="example_job_applied">12 Pelamar</string>
    <string name="example_current_position">Karyawan PT. JS Corp</string>
    <string name="contact_information">Informasi Kontak</string>
    <string name="summary">Ringkasan diri</string>
    <string name="work_experience">Pengalaman Kerja</string>
    <string name="education">Pendidikan</string>
    <string name="project">Projek</string>
    <string name="certification_and_license">Sertifikasi dan Lisensi</string>
    <string name="submit">Submit</string>
    <string name="example_location">Surakarta</string>
    <string name="settings">Pengaturan</string>
    <string name="account">Akun</string>
    <string name="change_password">Ubah kata sandi</string>
    <string name="general">Umum</string>
    <string name="invite_friends">Ajak teman pakai CariKerja</string>
    <string name="privacy_and_policy">Kebijakan dan Privasi</string>
    <string name="terms_and_condition">Syarat dan Ketentuan</string>
    <string name="rate_us">Beri rating aplikasi</string>
    <string name="deactivate_my_account">Hapus akun saya</string>
    <string name="logout">Keluar</string>
    <string name="change">Ubah</string>
    <string name="description_summary">Ringkasan diri (Max. 500 karakter)</string>
    <string name="write_summary">Tulis ringkasan diri</string>
    <string name="save">Simpan</string>
    <string name="example_job_title">Android Developer</string>
    <string name="example_company">Qatros</string>
    <string name="example_employee_type">Magang</string>
    <string name="example_date_start">Agu 2022</string>
    <string name="help_me_find_this_job">membantu saya mendapatkan pekerjaan ini</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="show_more">Lebih banyak</string>
    <string name="add">Tambah</string>
    <string name="add_work_experience">Tambah Pengalaman Kerja</string>
    <string name="job_title">Judul Pekerjaan</string>
    <string name="date_start">Tanggal Mulai</string>
    <string name="date_end">Tanggal Berakhir</string>
    <string-array name="employee_type">
        <item>Magang</item>
        <item>Kontrak</item>
        <item>Part-Time</item>
    </string-array>
    <string name="description">Deskripsi</string>
    <string name="add_education">Tambah pendidikan</string>
    <string name="company">Perusahaan/Nama Mitra</string>
    <string name="institution">Institusi</string>
    <string name="degree">Gelar</string>
    <string name="example_degree">S1</string>
    <string name="example_field_of_study">Akutansi</string>
    <string name="field_of_study">Bidang konsentrasi</string>
    <string name="project_name">Nama Projek</string>
    <string name="example_role">Kontraktor</string>
    <string name="example_project_name">Membangun Rumah</string>
    <string name="add_media">Tambah Media</string>
    <string name="add_project">Tambah Projek</string>
    <string name="certificate_name">Nama Sertifikat</string>
    <string name="example_certificate_name">Sertifikat Kontraktor Ahli</string>
    <string name="example_publishing_organization">Asosiasi Penilai Kontraktor</string>
    <string name="publishing_organization">Penerbit Sertifikasi</string>
    <string name="issue_date">Tanggal Publikasi</string>
    <string name="expiration_date">Tanggal Berakhir Tempo</string>
    <string name="certificate_id">Nomor Sertifikat</string>
    <string name="example_certificate_id">1OP8ROQK</string>
    <string name="example_certificate_url">www.example.com/link-certificate-saya</string>
    <string name="certificate_url">URL Sertifikat</string>
    <string name="add_certificate">Tambah Sertifikat</string>
    <string name="delete_this_data">Hapus data sertifikat</string>
    <string name="hello">Hei,</string>
    <string name="available_balance">Saldo anda yang tersedia</string>
    <string name="your_wallet">Dompet anda</string>
    <string name="withdraw">Withdraw</string>
    <string name="welcome">Selamat datang!</string>
    <string name="send">Kirim</string>
    <string name="post_job">Posting pekerjaan</string>
    <string name="post">Posting</string>
    <string name="job_position">Posisi pekerjaan</string>
    <string name="job_location">Lokasi pekerjaan</string>
    <string name="job_employee_type">Tipe karyawan</string>
    <string name="job_description">Deskripsi pekerjaan</string>
    <string name="example_job_position">Sales rokok</string>
    <string name="add_job">Posting Pekerjaan</string>
    <string name="job">Pekerjaan</string>
    <string name="add_post_job">Tambah Postingan Pekerjaan</string>
    <string name="insert_balance">Maksimal isi saldo (Min Rp. 10.000.000)</string>
    <string name="rp">Rp</string>
    <string name="instanly_add_amount">Menambahkan jumlah secara instan</string>
    <string name="jumlah_saldo">Jumlah</string>
    <string name="amount_20000">20.000</string>
    <string name="amount_50000">50.000</string>
    <string name="payment_summary">Ringkasan pembayaran</string>
    <string name="admin_fee">Biaya admin</string>
    <string name="total">Total</string>
    <string name="salary">Gaji</string>
    <string name="optional">(Opsional)</string>
    <string name="applied">Pelamar</string>
    <string name="day">Hari</string>
    <string name="empty_history">Riwayat anda masih kosong</string>
    <string name="empty_history_desc">Temukan pekerjaan sesuai dengan preferensi dan melamar dengan mudah</string>
    <string name="empty_history_post_job_desc">Temukan pekerja yang sesuai dengan kriteria yang anda cari dengan mudah</string>
    <string name="search_work">Cari pekerjaan</string>
    <string name="what_is_your_expertise">Apa keahlian anda?</string>
    <string name="subtitle_choose_skills">Pilih keahlian anda (anda bisa memilih lebih dari 1 keahlian)</string>
    <string name="example_skills">Managemen dan Konsultasi</string>
    <string name="skills">Keahlian</string>
    <string name="publish_job">Publish Pekerjaan</string>
    <string name="hint_search_work">Cari nama pekerjaan</string>
    <string name="detail_job">Detail Pekerjaan</string>
    <string name="apply">Lamar</string>
    <string name="example_total_day">90 Hari</string>
    <string name="job_address">Lokasi Pekerjaan</string>
    <string name="sure_for_applicant">Apakah anda yakin ingin melamar dengan profile yang sudah anda isi?</string>
    <string name="already_applied_this_job">Anda sudah melamar pekerjaan ini</string>
    <string name="total_applicant">Total Pelamar</string>
    <string name="list_applicant">List Pelamar</string>
    <string name="choose_applicant_desc">Apakah anda ingin memilih pekerja ini untuk bekerja di lowongan yang anda publish?</string>
    <string name="example_applicant_status">Ditolak</string>
    <string name="cant_add_applicant">Anda sudah memilih pelamar untuk pekerjaan ini</string>
    <string name="job_category">Kategori Pekerjaan</string>
    <string name="delete_job">Hapus Pekerjaan</string>
    <string name="cancel">Batal</string>
    <string name="published_by">Dipublish oleh</string>
    <string name="hint_search_job_category">Cari berdasarkan kategori</string>
    <string name="bank_account">Rekening</string>
    <string name="example_bank_account">664601200212</string>
    <string name="bank_account_name">Atas Nama</string>
    <string name="example_bank_name">BRI</string>
    <string name="bank_name">Nama Bank</string>
    <string name="confirm_delete">Apakah anda yakin ingin menghapus data yang anda pilih?</string>
    <string name="add_skills">Tambah Keahlian</string>
    <string name="edit">Ubah</string>
    <string name="edit_skills">Ubah Keahlian</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="closed">Closed</string>
    <string name="job_closed">Lowongan pekerjaan ini sudah ditutup</string>
    <string name="resizable_text_read_more">Lebih banyak</string>
    <string name="resizable_text_read_less">Lebih sedikit</string>
    <string name="lorem_ipsum_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="more_read">Lebih banyak</string>
    <string name="less_read">Lebih sedikit</string>
    <string name="see_url">Lihat URL</string>
</resources>